<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>MoreMobHeads</groupId>
  <artifactId>MoreMobHeads</artifactId>
  <version>1.20_1.0.43.D11-DEV</version>
  <name>More Mob Heads</name>
  <description>Drops mob heads when a mob is killed.</description>
  <scm>
    <url>https://github.com/JoelGodOfwar/MoreMobHeadsLib</url>
    <connection>scm:git:git@github.com:JoelGodOfwar/MoreMobHeadsLib.git</connection>
    <developerConnection>scm:git:https://github.com/JoelGodOfwar/MoreMobHeadsLib.git</developerConnection>
    <tag>#{project.${project.version}</tag>
  </scm>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <repository-owner>JoelGodOfwar</repository-owner>
	<repository-name>MoreMobHeads</repository-name>
    <github.global.server>github</github.global.server>
  </properties>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <relocations>
            <relocation>
              <pattern>org.bstats</pattern>
              <shadedPattern>com.github.joelgodofwar.mmh.api</shadedPattern>
            </relocation>
            <relocation>
              <pattern>io.papermc.lib</pattern>
              <shadedPattern>com.github.joelgodofwar.mmh.lib.paperlib</shadedPattern> <!-- Replace this -->
            </relocation>
            <relocation>
              <pattern>de.tr7zw.changeme.nbtapi</pattern>
              <shadedPattern>com.github.joelgodofwar.mmh.lib.nbtapi</shadedPattern>
            </relocation>
            <relocation>
              <pattern>lib.github.joelgodofwar</pattern>
              <shadedPattern>com.github.joelgodofwar.mmh.lib</shadedPattern>
            </relocation>
          </relocations>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <repository>
      <id>local-repo</id>
      <url>file://${user.home}/.m2/repository</url>
    </repository>
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
        <id>github</id>
        <url>https://maven.pkg.github.com/JoelGodOfwar/MoreMobHeadsLib</url>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
    </repository>

    <!--  bStats -->
    <repository>
      <id>CodeMC</id>
      <url>https://repo.codemc.org/repository/maven-public</url>
    </repository>
    <repository>
        <id>papermc</id>
        <url>https://papermc.io/repo/repository/maven-public/</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <!-- CodeMC -->
    <repository>
      <id>codemc-repo</id>
      <url>https://repo.codemc.org/repository/maven-public/</url>
      <layout>default</layout>
    </repository>
    <repository>
      <id>placeholderapi</id>
      <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
    </repository>
    <repository>
      <id>essentials-releases</id>
      <url>https://repo.essentialsx.net/releases/</url>
    </repository>
    <repository>
      <id>majek-repo</id>
      <url>https://repo.majek.dev/releases/</url>
    </repository>
    <repository>
      <id>opencollab-snapshot</id>
      <url>https://repo.opencollab.dev/main/</url>
    </repository>
    <repository>
      <id>maven-central</id>
      <url>https://repo.maven.apache.org/maven2</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>lib.github.joelgodofwar</groupId>
      <artifactId>core-utils</artifactId>
      <version>1.0.23</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>lib.github.joelgodofwar</groupId>
      <artifactId>MoreMobHeadsLib</artifactId>
      <version>0.4.6-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.geysermc.geyser</groupId>
      <artifactId>api</artifactId>
      <version>2.7.0-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20231013</version>
    </dependency>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot</artifactId>
      <version>1.21.9-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <!--  bStats -->
    <dependency>
      <groupId>org.bstats</groupId>
      <artifactId>bstats-bukkit</artifactId>
      <version>3.0.2</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
        <groupId>io.papermc</groupId>
        <artifactId>paperlib</artifactId>
        <version>1.0.8</version>
    </dependency>
    <dependency>
      <groupId>com.github.EmotionalLove</groupId>
      <artifactId>NmsAdapter</artifactId>
      <version>-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>de.tr7zw</groupId>
      <artifactId>item-nbt-api</artifactId>
      <version>2.13.1-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>me.clip</groupId>
      <artifactId>placeholderapi</artifactId>
      <version>2.11.3</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>net.essentialsx</groupId>
      <artifactId>EssentialsX</artifactId>
      <version>2.19.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>dev.majek</groupId>
      <artifactId>hexnicks</artifactId>
      <version>3.2.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.github.Aust1n46</groupId>
      <artifactId>VentureChat</artifactId>
      <version>2.19.1</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
</project>